fixed margin bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,8 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-around;
+		margin-left: 5%;
+		margin-right: 5%;
 	}
 	.content-left {
 		justify-content: center;
